[gd_scene load_steps=9 format=3 uid="uid://uu82xlr5wjpv"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_ef0le"]
[ext_resource type="Script" path="res://health.gd" id="2_27d8c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3to3j"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gl1ob"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_80hij"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_fja21"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ywtll"]
radius = 2.70153

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lwcw6"]
radius = 1.0

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_ef0le")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3to3j")

[node name="Base" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_gl1ob")

[node name="Facing" type="MeshInstance3D" parent="Base"]
transform = Transform3D(0.590715, 0, 0, 0, 0.590715, 0, 0, 0, 0.590715, 0, 0.57253, -0.403823)
material_override = SubResource("StandardMaterial3D_80hij")
mesh = SubResource("SphereMesh_fja21")
skeleton = NodePath("../..")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.24765, 0, 0, 0, 1.24765, 0, 0, 0, 1.24765, 0, 1.04672, 0)
shape = SubResource("SphereShape3D_ywtll")

[node name="Node" type="Node" parent="."]

[node name="Timer" type="Timer" parent="Node"]
wait_time = 5.0

[node name="Health_Node" type="Node" parent="."]
script = ExtResource("2_27d8c")
max_health = 100.0

[node name="Hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_lwcw6")

[node name="Attack_Timer" type="Node" parent="."]

[node name="Timer" type="Timer" parent="Attack_Timer"]
wait_time = 3.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Node/Timer" to="." method="_on_timer_timeout"]
[connection signal="damage_taken" from="Health_Node" to="." method="_on_health_node_damage_taken"]
[connection signal="damage_taken" from="Health_Node" to="Hitbox" method="_on_health_node_damage_taken"]
[connection signal="timeout" from="Attack_Timer/Timer" to="." method="_on_Attack_timeout"]
